--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <!--
    Licensed to the Apache Software Foundation (ASF) under one or more
    contributor license agreements.  See the NOTICE file distributed with
@@ -103,7 +102,6 @@
          name of the base package evolves with major release numbers
          (see "commons.osgi.symbolicName", below). -->
     <commons.componentid>numbers</commons.componentid>
-    <commons.module.name>org.apache.commons.numbers</commons.module.name>
     <!-- This value must reflect the current name of the base package. -->
     <commons.osgi.symbolicName>org.apache.commons.numbers</commons.osgi.symbolicName>
     <!-- OSGi -->
@@ -156,10 +154,12 @@
     -->
     <commons.release.name>commons-numbers-${project.version}</commons.release.name>
     <!-- Java8+ requires additional Javadoc qualifier for MathJax (default to empty). -->
-    <allowscript.javadoc.qualifier></allowscript.javadoc.qualifier>
+    <allowscript.javadoc.qualifier/>
     <!-- Invalid flag for old javadoc versions (default to empty). -->
-    <doclint.javadoc.qualifier></doclint.javadoc.qualifier>
-  </properties>
+    <doclint.javadoc.qualifier/>
+  <gib.referenceBranch>HEAD^1</gib.referenceBranch>
+        <gib.enabled>true</gib.enabled>
+    </properties>
 
   <build>
     <plugins>
@@ -243,7 +243,9 @@
             <exclude>src/site/resources/txt/userguide/stress/dh/**</exclude>
             <exclude>src/site/resources/txt/userguide/stress/tu/**</exclude>
             <exclude>dist-archive/**</exclude>
-          </excludes>
+          <exclude>**/.travis.yml</exclude>
+                        <exclude>**/NOW</exclude>
+                    </excludes>
         </configuration>
       </plugin>
 
@@ -277,7 +279,14 @@
         </plugin>
       </plugins>
     </pluginManagement>
-  </build>
+  <extensions>
+            <extension>
+                <groupId>com.vackosar.gitflowincrementalbuilder</groupId>
+                <artifactId>gitflow-incremental-builder</artifactId>
+                <version>3.4</version>
+            </extension>
+        </extensions>
+    </build>
 
   <reporting>
     <plugins>
@@ -576,7 +585,9 @@
 
     <profile>
       <id>javadoc8</id>
-      <activation><jdk>[1.8,)</jdk></activation>
+      <activation>
+                <jdk>[1.8,)</jdk>
+            </activation>
       <properties>
         <!-- Java8+ requires additional Javadoc qualifier for scripts such as MathJax -->
         <allowscript.javadoc.qualifier>--allow-script-in-comments</allowscript.javadoc.qualifier>
@@ -584,7 +595,9 @@
     </profile>
     <profile>
       <id>javadoc7</id>
-      <activation><jdk>[1.7,)</jdk></activation>
+      <activation>
+                <jdk>[1.7,)</jdk>
+            </activation>
       <properties>
         <!-- Invalid flag in earlier versions of javadoc -->
         <doclint.javadoc.qualifier>-Xdoclint:all</doclint.javadoc.qualifier>
@@ -598,10 +611,8 @@
     <module>commons-numbers-primes</module>
     <module>commons-numbers-quaternion</module>
     <module>commons-numbers-fraction</module>
-    <module>commons-numbers-angle</module>
     <module>commons-numbers-gamma</module>
-    <module>commons-numbers-combinatorics</module>
-    <module>commons-numbers-arrays</module>
   </modules>
 
 </project>
+
